[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "arlib"
version = "0.1.0"
description = "A Python library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySMT==0.9.0",
    "z3-solver==4.12.0",
    "python-sat==0.1.8.dev1",
    "pyapproxmc==4.1.24",
    "six>=1.16.0",
    "psutil~=5.9.0",
    "pytest~=7.1.0",
    "pytest-cov",
    "tqdm==4.65.0",
    "requests==2.32.3",
    "setuptools~=70.0.0",
    "lark==1.2.2",
    "multipledispatch==1.0.0",
    "toolz==1.0.0",
    "numpy",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = []

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [ "tests",]
python_files = "test_*.py"
