# TODO: refine...
[metadata]
name = arlib
version = 0.01
url = https://github.com/ZJU-Automated-Reasoning-Group/arlib
download_url = https://github.com/ZJU-Automated-Reasoning-Group/arlib
project_urls =
    Source Code = https://github.com/ZJU-Automated-Reasoning-Group/arlib
author = The authors of arlib
license = GPLv3
license_file = LICENSE
description = A toolkit for automated reasoning
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    arlib=arlib.main:main